# firefox-chrome-manager

./: Cargo.toml  README.md
src/: git.rs  install.rs  list.rs  main.rs  profile.rs
src/command/: install.rs  list.rs  mod.rs  uninstall.rs  update.rs
