[package]
name = "firefox-chrome-manager"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
anyhow = "1"
directories = "3"
walkdir = "2"
rust-ini = "0.17"
url = "2"

git2 = { version = "0.13", optional = true }
